--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Lint and Test the Codex Local Harness
 on:
   push:
     branches:
-      - master
+      - main
     tags:
       - 'v*.*.*'
   workflow_dispatch:
